chore: sync stylesheets from upstream

--- a/custom/less/section-basic.less
+++ b/custom/less/section-basic.less
@@ -352,3 +352,7 @@
     background: #216eff !important;
     color: white !important;
 }
+
+.introjs-helperNumberLayer{
+  box-sizing: content-box;
+}
