--- a/custom/less/section-dashboard-header.less
+++ b/custom/less/section-dashboard-header.less
@@ -273,7 +273,7 @@
     margin-left: 6px;
 
     // Hide nav labels for small screens
-    @media (max-width: @screen-sm-max) {
+    @media (max-width: @screen-md-max) {
       display: none;
     }
 
@@ -312,7 +312,7 @@
         &:hover,
         &:focus,
         &.active {
-          background: #fff;
+          background-color: #fff;
         }
 
         // Use white background for mobile screens
