--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -23,7 +23,7 @@
     <div class="col-sm-3">
       <div class="doc-hero-links">
         <a href="faq_list.html" class="doc-quick-start-btn">
-          <i class="icon icon-faq"></i>
+          <i class="icon icon-question"></i>
           常见问题一览
         </a>
       </div>
