--- a/custom/less/section-dashboard.less
+++ b/custom/less/section-dashboard.less
@@ -1,4 +1,71 @@
 // applist.swig, apps.html in dashboard
+
+// Special class overrides only for qcloud theme
+.lc-main-dashboard {
+  padding: 10px 30px 20px;
+}
+
+// Special dashboard instructions
+.dashboard-masthead {
+
+  h1 {
+
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  hr {
+    display: none;
+
+    @media (max-width: @screen-xs-max) {
+      display: block;
+    }
+  }
+
+  .btn-lg {
+    margin: 20px 0;
+  }
+
+  .masthead-content {
+    padding: 15px;
+    margin-bottom: 30px;
+    border-radius: @border-radius-base;
+    border: 1px solid @gray-lighter;
+    text-align: center;
+    font-size: 15px;
+
+    .icon {
+      display: block;
+      font-size: 64px;
+      margin-right: 10px;
+      color: @gray;
+    }
+
+    .heading {
+      margin: 10px 0 8px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    ol {
+      list-style: none;
+      padding: 0;
+      font-size: 16px;
+
+      li {
+        .clearfix;
+        margin-bottom: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
 .app-item-name {
   font-size: @font-size-large;
   margin: 0;
@@ -258,7 +325,7 @@
 
         a {
           color: @link-color;
-          background: #fff;
+          background-color: #fff;
           box-shadow: 0 -1px 0 0 @link-color;
         }
       }
