--- a/custom/less/ui-type.less
+++ b/custom/less/ui-type.less
@@ -16,6 +16,10 @@ h2, h3, h4, h5, h6 {
     color: @gray-light;
     font-weight: 300;
   }
+
+  small {
+    font-weight: 300;
+  }
 }
 
 ::selection {
