fix(theme): missing deps

--- a/custom/less/app-docs.less
+++ b/custom/less/app-docs.less
@@ -4,7 +4,7 @@
 
 // Custom theme for Bootstrap
 // Load custom Bootstrap theme, all Bootstrap related customizations are defined here
-@import "theme-leancloud";
+@import "theme-core";
 
 // Plug-ins
 // Plug-ins are third-party libraries related stylesheets
