fix(docs): [FAQ] iOS 项目打包后的大小 (#1272)
* fix(docs): [FAQ] iOS 项目打包后的大小

* revised by reviewer's comments

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -134,6 +134,7 @@
       <h2>iOS/OS X SDK</h2>
       <ul>
         <li><a href="faq.html#安装_Cocopods_失败怎么解决">安装 Cocopods 失败怎么解决</a></li>
+        <li><a href="faq.html#iOS_项目打包后的大小">iOS 项目打包后体积能否缩小</a></li>
         <li><a href="ios_os_x_faq.html#为什么不能真机调试">为什么不能真机调试</a></li>
         <li><a href="faq.html#编译失败">编译失败</a></li>
         <li><a href="faq.html#Undefined_symbols_for_architecture">Undefined symbols for architecture</a></li>
