LeanStorage: Fix for language-aware date type

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -75,8 +75,8 @@
 ---|---|---
 `{{objectIdName}}`|String|该对象唯一的 Id 标识
 `ACL`|ACL|该对象的权限控制，实际上是一个 JSON 对象，控制台做了展现优化。
-`{{createdAtName}}`|Date|该对象被创建的 UTC 时间，控制台做了针对当地时间的展现优化。
-`{{updatedAtName}}` |Date|该对象最后一次被修改的时间
+`{{createdAtName}}`|{{dateType}}|该对象被创建的 UTC 时间，控制台做了针对当地时间的展现优化。
+`{{updatedAtName}}` |{{dateType}}|该对象最后一次被修改的时间
 
 <dl>
   <dt>属性名</dt>
