--- a/templates/pages/demo.html
+++ b/templates/pages/demo.html
@@ -35,6 +35,7 @@
           <span class="pull-right label label-success" ng-show="demo.type=='android'">Android</span>
           <span class="pull-right label label-warning" ng-show="demo.type=='unity'">Unity</span>
           <span class="pull-right label label-danger" ng-show="demo.type=='winphone'">Windows Phone</span>
+          <span class="pull-right label label-danger" ng-show="demo.type=='js'">JavaScript</span>
         </h1>
         <p class="demo-desc">{{demo.desc}}</p>
         <!-- <a href="{{demo.downlink}}" class="btn btn-default">下载</a>
