fix(docs): [存储] PHP 文档上线 (#1282)

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -177,7 +177,8 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">PHP</a>
           <ul class="dropdown-menu">
-            <li><a href="/api-docs/php/" target="_blank">PHP SDK API</a></li>
+            <li><a href="leanstorage_guide-php.html">数据存储开发指南</a></li>
+            <li><a href="/api-docs/php/" target="_blank">SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
