--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -182,6 +182,17 @@
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
+        <h2>PHP SDK</h2>
+        <ul>
+          <li><a href="leanstorage_guide-php.html">数据存储开发指南</a></li>
+          <li><a href="/api-docs/php/" target="_blank">SDK API</a></li>
+        </ul>
+      </div>
+    </div>
+    
+
+    <div class="col-md-3 col-xs-6">
+      <div class="link-block">
         <h2>REST API 和开放平台</h2>
         <ul>
           <li><a href="rest_api.html">数据存储 API</a></li>
@@ -195,6 +206,10 @@
       </div>
     </div>
     <!-- .col-md-4 -->
+  </div>
+  <!-- .row -->
+<hr>
+  <div class="row">
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
@@ -218,10 +233,6 @@
       </div>
     </div>
     <!-- .col-md-4 -->
-  </div>
-  <!-- .row -->
-<hr>
-  <div class="row">
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
