--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -6,8 +6,6 @@
 
 #  {{platform_title}} 数据存储开发指南
 
-## 简介
-
 数据存储（{{productName}}）是 LeanCloud 提供的核心功能之一，它的使用方法与传统的关系型数据库有诸多不同。下面我们将其与传统数据库的使用方法进行对比，让大家有一个初步了解。
 
 下面这条 SQL 语句在绝大数的关系型数据库都可以执行，其结果是在 Todo 表里增加一条新数据：
@@ -50,7 +48,9 @@
 
 ## SDK 安装
 
+{% block text_and_link_to_install_doc %}
 请阅读 [{{platform_title}} 安装指南](sdk_setup-{{segment_code}}.html)。
+{% endblock %}
 
 {% block text_web_security %}{% endblock %}
 
@@ -103,6 +103,7 @@ description     objectId
 
 {% block code_save_object_by_cql %}{% endblock %}
 
+{% block section_saveOptions %}
 #### 保存选项
 
 `{{baseObjectName}}` 对象在保存时可以设置选项来快捷完成关联操作，可用的选项属性有：
@@ -115,11 +116,18 @@ description     objectId
 <a id="saveoption_query_example" name="saveoption_query_example"></a>【示例】一篇 wiki 文章允许任何人来修改，它的数据表字段有：**content**（wiki 内容）、**version**（版本号）。每当 wiki 内容被更新后，其 version 也需要更新（+1）。用户 A 要修改这篇 wiki，从数据表中取出时其 version 值为 3，当用户 A 完成编辑要保存新内容时，如果数据表中的 version 仍为 3，表明这段时间没有其他用户更新过这篇 wiki，可以放心保存；如果不是 3，开发者可以拒绝掉用户 A 的修改，或执行其他自定义的业务逻辑。
 
 {% block code_saveoption_query_example %}{% endblock %}
+{% endblock %}
 
 ### 数据类型
 `{{baseObjectName}}` 支持以下数据类型：
 
 {% block code_data_type %}{% endblock %}
+
+{% block section_dataType_largeData %}
+我们**不推荐**在 `{{baseObjectName}}` 中使用 `{{byteType}}` 来储存大块的二进制数据，比如图片或整个文件。**每个 `{{baseObjectName}}` 的大小都不应超过 128 KB**。如果需要储存更多的数据，建议使用 [`{{fileObjectName}}`](#文件)。
+{% endblock %}
+
+若想了解更多有关 LeanStorage 如何解析处理数据的信息，请查看专题文档《[数据与安全](./data_security.html)》。
 
 ### 获取对象
 每个被成功保存在云端的对象会有一个唯一的 Id 标识 `{{objectIdName}}`，因此获取对象的最基本的方法就是根据 `{{objectIdName}}` 来查询：
@@ -162,7 +170,7 @@ description     objectId
 
 {% block code_object_fetch %}{% endblock %}
 
-在更新对象操作后，对象本地的 {{updatedAtName}} 字段（最后更新时间）会被刷新，直到下一次 save 或 fetch 操作，{{updatedAtName}} 的最新值才会被同步到云端，这样做是为了减少网络流量传输。
+在更新对象操作后，对象本地的 `{{updatedAtName}}` 字段（最后更新时间）会被刷新，直到下一次 save 或 fetch 操作，`{{updatedAtName}}` 的最新值才会被同步到云端，这样做是为了减少网络流量传输。
 
 如果需要在保存或更新之后让本地数据自动与云端保持一致，可以使用 [保存选项 `{{saveOptions_fetchWhenSave}}`](#保存选项)：
 
@@ -258,7 +266,7 @@ description     objectId
 ### 关联数据
 
 #### `{{relationObjectName}}`
-对象可以与其他对象相联系。如前面所述，我们可以把一个 `{{baseObjectName}}` 的实例 a，当成另一个 `{{baseObjectName}}` 实例 b 的属性值保存起来。这可以解决数据之间一对一或者一对多的关系映射，就像关系型数据库中的主外键关系一样。
+对象可以与其他对象相联系。如前面所述，我们可以把一个 `{{baseObjectName}}` 的实例 A，当成另一个 `{{baseObjectName}}` 实例 B 的属性值保存起来。这可以解决数据之间一对一或者一对多的关系映射，就像关系型数据库中的主外键关系一样。
 
 例如，一个 TodoFolder 包含多个 Todo ，可以用如下代码实现：
 
@@ -273,7 +281,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% block code_pointer_comment_one_to_many_todoFolder %}{% endblock %}
 
-相关内容可参考 [关联数据查询](#关联数据查询)。
+相关内容可参考 [关联数据查询](#{{relationObjectName}}_查询)。
 
 #### 地理位置
 地理位置是一个特殊的数据类型，{{productName}} 封装了 `{{geoPointObjectName}}` 来实现存储以及相关的查询。
@@ -443,7 +451,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 查询默认最多返回 100 条符合条件的结果，要更改这一数值，请参考 [限定结果返回数量](#限定返回数量)。
 
-当多个查询条件并存时，它们之间默认为 AND 关系，即查询只返回满足了全部条件的结果。建立 OR 关系则需要使用 [复合查询](#复合查询)。
+当多个查询条件并存时，它们之间默认为 AND 关系，即查询只返回满足了全部条件的结果。建立 OR 关系则需要使用 [组合查询](#组合查询)。
 
 注意：在简单查询中，如果对一个对象的同一属性设置多个条件，那么先前的条件会被覆盖，查询只返回满足最后一个条件的结果。例如，我们要找出优先级为 0 和 1 的所有 Todo，错误写法是：
 
@@ -705,7 +713,9 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 
 {% block code_user_signUp_with_username_and_password %}{% endblock %}
 
+{% block text_using_async_methods %}
 我们建议在可能的情况下尽量使用异步版本的方法，这样就不会影响到应用程序主 UI 线程的响应。
+{% endblock %}
 
 如果注册不成功，请检查一下返回的错误对象。最有可能的情况是用户名已经被另一个用户注册，错误代码 [202](error_code.html#_202)，即 `_User` 表中的 `username` 字段已存在相同的值，此时需要提示用户尝试不同的用户名来注册。同样，邮件 `email` 和手机号码 `mobilePhoneNumber` 字段也要求在各自的列中不能有重复值出现，否则会出现 [203](error_code.html#_203)、[214](error_code.html#_214) 错误。
 
@@ -715,9 +725,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 
 #### 设置手机号码
 
-微信、陌陌等流行应用都会建议用户将账号和一个手机号绑定，这样方便进行身份认证以及日后的密码找回等安全模块的使用。我们也提供了一整套发送短信验证码以及验证手机号的流程，这样注册用户的时候也可以设置手机号，并且
-
-为此，在注册用户的时候也可以设置手机号，并且我们提供了一整套发送短信验证码以及验证手机号的流程。这部分流程以及代码演示请参考 {{ link_to_sms_guide_doc }}。
+微信、陌陌等流行应用都会建议用户将账号和一个手机号绑定，这样方便进行身份认证以及日后的密码找回等安全模块的使用。我们也提供了一整套发送短信验证码以及验证手机号的流程，这部分流程以及代码演示请参考 {{ link_to_sms_guide_doc }}。
 
 ### 登录
 
@@ -729,7 +737,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 
 #### 手机号密码登录
 
-请确保已详细阅读了 {{ link_to_sms_guide_doc }} 这一小节的内容，才可以顺利理解手机号匹配密码登陆的流程以及适用范围。
+请确保已详细阅读了 {{ link_to_sms_guide_doc }} 这一小节的内容，才可以顺利理解手机号匹配密码登录的流程以及适用范围。
 
 用户的手机号只要经过了验证，就可以使用手机号密码登录的功能，否则登录会失败。
 
