fix(docs): [短信] 安全码改为验证码 (#1287)
短信运营商做了调整，以后在验证短信里，不能出现安全码字样。

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -131,7 +131,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 一般来说，用户收到的注册验证短信内容为：
 
-<samp ng-non-bindable class="bubble">【AppName】欢迎使用 AppName 服务，您的安全码是 123456，请输入完成验证。</samp>
+<samp ng-non-bindable class="bubble">【AppName】欢迎使用 AppName 服务，您的验证码是 123456，请输入完成验证。</samp>
 
 其中 **AppName** 是应用的名称，如果这个名称超过五个汉字（10 个字符）的长度，就会因为签名太长而被短信供应商拒绝发送。请到 [**控制台** > **设置**](https://leancloud.cn/app.html?appid={{appid}}#/general) 页面修改应用名称。
 
