添加 php 文档链接，正式发布上线。 (#1308)

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -206,6 +206,9 @@
           <li><a href="leanengine_cloudfunction_guide-node.html">云函数开发指南</a></li>
           <li class="dropdown-header">Python</li>
           <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
+          <li class="dropdown-header">PHP</li>
+          <li><a href="leanengine_webhosting_guide-php.html">网站托管开发指南</a></li>
+          <li><a href="leanengine_cloudfunction_guide-php.html">云函数开发指南</a></li>
           <li role="separator" class="divider"></li>
           <li><a href="leanengine_examples.html">云引擎项目示例</a></li>
           <li><a href="leanengine_cli.html">云引擎命令行工具</a></li>
