--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -185,11 +185,14 @@
         <h2>PHP SDK</h2>
         <ul>
           <li><a href="leanstorage_guide-php.html">数据存储开发指南</a></li>
+          <li class="dropdown-header">云引擎</li>
+          <li><a href="leanengine_webhosting_guide-php.html">网站托管开发指南</a></li>
+          <li><a href="leanengine_cloudfunction_guide-php.html">云函数开发指南</a></li>
           <li><a href="/api-docs/php/" target="_blank">SDK API</a></li>
         </ul>
       </div>
     </div>
-    
+
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
