--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -165,7 +165,7 @@ AVCloud.rpcFunctionInBackground("averageStars", movie,
 
 ### 切换云引擎环境
 
-免费版云引擎应用只有「生产环境」，而专业版云引擎应用有一个额外的「生产环境」，使用 `LeanClient` 的 `useProduction` 方法可以在它们之间切换：
+专业版云引擎应用有「生产环境」和「预备环境」，切换方法为：
 
 ```objc
 [AVCloud setProductionMode:NO]; // 调用预备环境
@@ -176,6 +176,9 @@ AVCloud.setProductionMode(false); // 调用预备环境
 ```php
 LeanClient::useProduction(false); // 调用预备环境
 ```
+
+免费版云引擎应用只有「生产环境」，因此以上切换方法不适用。
+
 
 ### 云函数错误响应码
 
