feat(python): add threading safety section (#1319)

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -316,6 +316,8 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% endblock %}
 
+{% block object_extra %}{% endblock %}
+
 {% block text_data_protocol %}
 ### 数据协议
 很多开发者在使用 {{productName}} 初期都会产生疑惑：客户端的数据类型是如何被云端识别的？
